[gd_scene load_steps=4 format=2]

[ext_resource path="res://client/main_menu/BaseWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/main_menu/ConnectWindow.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ConnectWindow" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="0"]
margin_left = 362.0
margin_top = 213.0
margin_right = 662.0
margin_bottom = 387.0
rect_min_size = Vector2( 300, 0 )

[node name="PlayerNameLabel" type="Label" parent="CenterContainer/VBoxContainer" index="0"]
margin_right = 300.0
margin_bottom = 20.0
text = "Player Name"
align = 1

[node name="PlayerName" type="LineEdit" parent="CenterContainer/VBoxContainer" index="1"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 54.0
text = "A Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer" index="2"]
margin_top = 58.0
margin_right = 300.0
margin_bottom = 62.0
custom_styles/separator = SubResource( 1 )

[node name="ServerIpLabel" type="Label" parent="CenterContainer/VBoxContainer" index="3"]
margin_top = 66.0
margin_right = 300.0
margin_bottom = 86.0
text = "Server IP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerIp" type="LineEdit" parent="CenterContainer/VBoxContainer" index="4"]
margin_top = 90.0
margin_right = 300.0
margin_bottom = 120.0
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer" index="5"]
margin_top = 124.0
margin_right = 300.0
margin_bottom = 144.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="Button" parent="CenterContainer/VBoxContainer" index="6"]
margin_top = 148.0
margin_right = 300.0
margin_bottom = 174.0
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
